# MSOpenCV

./: build.gradle  readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/meishe/msopencv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MSFaceLocation.cpp  MSFaceLocation.h  log_util.h  ms_jni_helper.cpp  ms_jni_helper.h  native-lib.cpp
app/src/main/java/com/meishe/msopencv/: App.java  ImageProcess.java  MSFaceLocation.java  MSIDCardIdentificationActivity.java  MainActivity.java  PicReduceActivity.java
app/src/main/java/com/meishe/msopencv/activity/: CameraXPreViewActivity.java  CaptureActivity.java  LaunchActivity.java  MSIDCardIdentificationActivity.java  MainActivity.java  PicReduceActivity.java
app/src/main/java/com/meishe/msopencv/utils/: AndroidOS.java  PathUtils.java  Utils.java
app/src/main/res/layout/: activity_capture.xml  activity_launch.xml  activity_main.xml  activity_msidcard_identification.xml  activity_pic_reduce.xml  activity_test_capture.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/meishe/msopencv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
